--- a/registration.html
+++ b/registration.html
@@ -5,70 +5,42 @@
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="globalcss.css" />
     <link rel="stylesheet" type="text/css" href="registration.css" />
-    <script>
-function attemptRegistration() {
-  // Retrieve input values
-  const name = document.getElementById("regName").value;
-  const middleName = document.getElementById("regMName").value;
-  const surname = document.getElementById("regSName").value;
-  const address = document.getElementById("regAddr").value;
-  const contactNumber = document.getElementById("regCNum").value;
-  const email = document.getElementById("regEmail").value;
-  const password = document.getElementById("regPass").value;
-
-  // Create object to store input values
-  const registrationData = {
-    name: name,
-    middleName: middleName,
-    surname: surname,
-    address: address,
-    contactNumber: contactNumber,
-    email: email,
-    password: password
-  };
-
-  // Log the registrationData object to console
-  console.log(registrationData);
-}
-
-    </script>
   </head>
   <body>
     <div class="container-center-horizontal">
       <div class="registration">
         <div class="header">
-            <p id="uni">University of the Philippines Visayas</p>
-            <a href="HomePage.html"><img src="images/logo.png" id="iv"></a>
+          <p id="uni">University of the Philippines Visayas</p>
+          <a href="HomePage.html"><img src="images/logo.png" id="iv"></a>
         </div>
         <div class="content">
-            <a href="HomePage.html"><img src="exitIcon.png" id="exit"></a>
-            <img src="createAcc.png" id="ca">
+          <a href="HomePage.html"><img src="exitIcon.png" id="exit"></a>
+          <img src="createAcc.png" id="ca">
+          <form action="registration.php" method="post" novalidate>
             <div class="formTwin">
-                <input type="text" id="regName" placeholder="Name">
-                <input type="text" id="regMName" placeholder="Middle Name">
+              <input type="text" id="regName" name="name" placeholder="Name">
             </div>
             <div class="formTwin">
-                <input type="text" id="regSName" placeholder="Surname">
-                <select id="regAddr">
-                    <option value="Luzon">Luzon</option>
-                    <option value="Visayas">Visayas</option>
-                    <option value="China">China</option>
-                    <option value="Mindanao">Mindanao</option>
-                  </select>
+              <select id="regAddr" name="address">
+                <option value="ELEKTRONS">ELEKTRONS</option>
+                <option value="SKIMMERS">SKIMMERS</option>
+                <option value="CLOVERS">CLOVERS</option>
+                <option value="REDBOLTS">REDBOLTS</option>
+              </select>
             </div>
             <div class="formRow">
-                <input type="text" id="regCNum" placeholder="Contact Number">
-                <input type="text" id="regEmail" placeholder="Email">
-                <input type="password" id="regPass" placeholder="Password">
+              <input type="text" id="regEmail" name="email" placeholder="Email">
+              <input type="password" id="regPass" name="password" placeholder="Password">
             </div>
-            <input type="submit" onclick="attemptRegistration()" value="Register">
-            <p>
-                <span>Already have an account?</span>
-                <span><a href="voters-login.html">Log in here</a> instead</span>
-            </p>
+            <input type="submit" value="Register">
+          </form>
+          <p>
+            <span>Already have an account?</span>
+            <span><a href="voters-login.html">Log in here</a> instead</span>
+          </p>
         </div>
         <div class="footer">
-            <p id="copy">Copyright © 2023. All Rights Reserved.</p>
+          <p id="copy">Copyright © 2023. All Rights Reserved.</p>
         </div>
       </div>
     </div>
