--- a/view-scores.html
+++ b/view-scores.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" /><meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="globalcss.css" />
     <link rel="stylesheet" type="text/css" href="view-scores.css" />
+    <link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
@@ -15,9 +18,6 @@
         </div>
         <div class="content">
           <div class="dash">
-            <div class="dashRow">
-              <img src="dashIcon.png" id="dash">
-            </div>
             <a href="Election_settings.html">  <input id="dashItem" type="submit" value="Election Settings"></a>
             <a href="candidates.html"><input id="dashItem" type="submit" value="Candidates"></a>
            <a href="VoterSpecified.html"><input id="dashItem" type="submit" value="Voters Specified"> </a> 
@@ -25,7 +25,7 @@
           </div>
           <div class="results">
             <div class="resultExit">
-              <a href="adminelection.html" id="return">Return to Elections</a>
+              <a href="admin_election.html" id="return">Return to Elections</a>
             </div>
             <div class="scores">
               <div class="positions" id="positionValue">
