--- a/Election_settings.html
+++ b/Election_settings.html
@@ -6,89 +6,108 @@
     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet" />
     <link href="./css/Election_settings.css" rel="stylesheet" />
     <title>Election Settings</title>
-
-
   </head>
   <body>
-
     <div class="banner"></div>
     <div class="v32_81"></div>
-
-
-     <div class="sidebar">
+    <div class="sidebar">
       <button id="ES" onclick="Election_settings()">Election Settings</button>
       <button id="CD" onclick="Candidates()">Candidates</button>
       <button id="VS" onclick="VoterSpecified()">Voters Specified</button>
       <button id="VW" onclick="ViewScores()">View Scores</button>
-             <script>
+      <script>
         function Election_settings() {
-        location.replace("Election_settings.html") }
+          location.replace("Election_settings.html");
+        }
         function Candidates() {
-        location.replace("Candidates.html") }
+          location.replace("Candidates.html");
+        }
         function VoterSpecified() {
-        location.replace("VoterSpecified.html")}
+          location.replace("VoterSpecified.html");
+        }
         function ViewScores() {
-        location.replace("ViewScores.html") }
-        </script>
-
+          location.replace("ViewScores.html");
+        }
+      </script>
     </div>
+    <div class="form-container">
+     <form id="candidateForm" action="election_settings.php" method="POST">
+        <label id="ET">Election title:</label><br>
+            <input type="radio" id="elektrons" name="title" value="elektrons">
+            <input type="radio" id="redbolts" name="title" value="redbolts">
+            <input type="radio" id="clovers" name="title" value="clovers">
+            <input type="radio" id="skimmers" name="title" value="skimmers">
 
-  
-    </div> 
-        <div class="form-container">
+        <label id="DS" for="description">Election description:</label>
+        <textarea id="description" name="description" placeholder="What's on your mind?"></textarea>
+        <label id="ED" for="duration-from">Election duration (From):</label>
+        <input type="date" id="duration-from" name="duration-from" required>
+        <label id="EF" for="duration-to">Election duration (To):</label>
+        <input type="date" id="duration-to" name="duration-to">
+        <label id="upload" for="upload"> Election Banner: </label>
+        <input id="UL" type="file" name="upload">
+        <input id="apply" type="submit" value="Apply">
+  </form>
+      <script>
+        const durationFromInput = document.getElementById('duration-from');
+        const durationToInput = document.getElementById('duration-to');
+        const electionForm = document.getElementById('electionForm');
 
-<form>
-  <label id="ET" for="title">Election title:</label>
-  <input type="text" id="title" name="title" placeholder=".org" required>
+        // The following code executes when the form is submitted
+        electionForm.addEventListener('submit', (event) => {
+          event.preventDefault(); // prevent form submission
 
-  <label id="DS" for="description">Election description:</label>
-  <textarea id="description" name="description" placeholder="What's on your mind?"></textarea>
+          const durationFromDate = new Date(durationFromInput.value);
+          const formattedDurationFromDate = durationFromDate.toLocaleDateString('en-US', {
+            year: 'numeric',
+            month: 'long',
+            day: 'numeric'
+          });
 
-  <label id="ED" for="duration-from">Election duration (From):</label>
-  <input type="date" id="duration-from" name="duration-from" required>
+          const durationToDate = new Date(durationToInput.value);
+          const formattedDurationToDate = durationToDate.toLocaleDateString('en-US', {
+            year: 'numeric',
+            month: 'long',
+            day: 'numeric'
+          });
 
-  <label id="EF" for="duration-to">Election duration (To):</label>
-  <input type="date" id="duration-to" name="duration-to">
+          const electionTitle = document.querySelector('input[name="title"]:checked').value;
+          const electionDescription = document.getElementById('description').value;
+          console.log(`Election title: ${electionTitle}`);
+          console.log(`Election description: ${electionDescription}`);
+          console.log(`Election duration: ${formattedDurationFromDate} - ${formattedDurationToDate}`);
 
-  <label id="upload" for="upload"> Election Banner: </label>
-  <input id="UL" type="file" name="upload">
-  <input id="apply" type="submit" value="Apply">
-</form>
+          const formData = new FormData(electionForm); // Create a FormData object with the form data
 
-<script>
-  const durationFromInput = document.getElementById('duration-from');
-  const durationToInput = document.getElementById('duration-to');
-  const submitButton = document.querySelector('input[type="submit"]');
+          // Append the file data separately
+          const fileInput = document.getElementById('UL');
+          const file = fileInput.files[0];
+          formData.append('upload', file);
 
-  submitButton.addEventListener('click', (event) => {
-    event.preventDefault(); // prevent form submission
+          // Send the form data to the PHP script using Fetch API
+          fetch('election_settings.php', {
+            method: 'POST',
+            body: formData
+          })
+            .then(response => response.text())
+            .then(data => {
+              console.log(data);
+              // Clear form inputs after successful submission
+              electionForm.reset();
 
-    const durationFromDate = new Date(durationFromInput.value);
-    const formattedDurationFromDate = durationFromDate.toLocaleDateString('en-US', {
-      year: 'numeric',
-      month: 'long',
-      day: 'numeric'
-    });
+               // Redirect to Candidates.html
+              location.replace("Candidates.html");
 
-    const durationToDate = new Date(durationToInput.value);
-    const formattedDurationToDate = durationToDate.toLocaleDateString('en-US', {
-      year: 'numeric',
-      month: 'long',
-      day: 'numeric'
-    });
+              // Handle the response data as needed
+            })
+            .catch(error => {
+              console.error('Error:', error);
+            });
+        });
 
-    const electionTitle = document.getElementById('title').value;
-    const electionDescription = document.getElementById('description').value;
-    console.log(`Election title: ${electionTitle}`);
-    console.log(`Election description: ${electionDescription}`);
-    console.log(`Election duration: ${formattedDurationFromDate} - ${formattedDurationToDate}`);
-  });
-</script>
-
-
-</div>
-
-
+         const electionForm = document.getElementById('candidateForm');
+      </script>
+    </div>
     <div class="v60_114"></div>
     <div class="v60_120"></div>
     <div class="v60_116"></div>
