--- a/admin-login.html
+++ b/admin-login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="globalcss.css" />
-    <link rel="stylesheet" type="text/css" href="voters-login.css" />
+    <link rel="stylesheet" type="text/css" href="login.css" />
   </head>
   <body>
     <div class="container-center-horizontal">
